Implementing ClientSessionId's for more secure execution. Fixing driver termination issues and using ProcessBuilder with arguments to prevent OS code injection